@@ -3,6 +3,10 @@ Revision history for Dist-Zilla-PluginBundle-CJM
 0.02   NOT
 	- Added POD tests
 
+	Dist::Zilla::Plugin::PodLoom
+	  - Define abstract, module, & version only if they
+	    could be determined
+
 0.01   October 11, 2009
 	- Initial release includes:
 	    Dist::Zilla::Plugin::PodLoom
